# Snake3D

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  Snake3D  cmake_install.cmake  snake.AppImage
include/: CubeRenderer.h  GameMenu.h  GameState.h  Matrice3D.h  ScoreDisplay.h  keycontrole.h  main.h
include/control/: CommandRegistry.h  GameControls.h  InputHandler.h
include/logic/snake/: Snake.h  SnakeCollision.h  SnakeController.h  SnakeMovement.h
include/matrix/: MatrixOperation.h  RotationMatrixX.h  RotationMatrixY.h
include/matrix/Rotation/: MatrixOperation.h  RotationMatrixX.h  RotationMatrixY.h
src/: CubeRenderer.cpp  GameMenu.cpp  GameState.cpp  Matrice3D.cpp  ScoreDisplay.cpp  keycontrole.cpp  main.cpp
src/control/: CommandRegistry.cpp  GameControls.cpp  InputHandler.cpp
src/logic/snake/: Snake.cpp  SnakeCollision.cpp  SnakeController.cpp  SnakeMovement.cpp
src/matrix/: RotationMatrixX.cpp  RotationMatrixY.cpp
